--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font: roboto;
+    font: 1em roboto;
 }
 .banner{
     background-color: #1F2937;
@@ -9,6 +9,7 @@ body{
 .header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .logo{
     font-size: 24px;
@@ -20,14 +21,36 @@ ul{
     justify-content: space-between;
     list-style: none;
     gap: 10px;
-}
-li{
     font-size: 18px;
     color: #e5e7eb;
 }
 a{
     color: #e5e7eb;
+    text-decoration: none;
 }
 .hero{
     display: flex;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    gap: 30px;
+    justify-content: space-between;
+}
+.hero-image{
+    display: flex;
+    background-color: grey;
+    justify-content: center;
+    align-items: center;
+}
+.main-text{
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+}
+.secondary-text{
+    font-size: 18px;
+    color: #e5e7eb;
+}
+button{
+    background-color: #3882f6;
+    border-radius: 5px;
 }
