--- a/style.css
+++ b/style.css
@@ -87,3 +87,14 @@ li{
     height: 100px;
     padding: 3px;
 }
+.quote{
+    background-color: #e5e7eb;
+    font-size: 19px;
+    font-style: italic;
+    padding: 50px 100px;
+}
+.sign{
+    display: flex;
+    justify-content: end;
+    font-weight: bolder;
+}
