--- a/style.css
+++ b/style.css
@@ -118,3 +118,13 @@ li{
     width: 100px;
     height: 25px;
 }
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    color:#e5e7eb;
+    font-size: 13px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
