--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     font: 1em roboto;
 }
 .banner{
@@ -31,8 +32,8 @@ a{
 }
 .hero{
     display: flex;
-    padding-bottom: 50px;
-    gap: 30px;
+    padding-bottom: 100px;
+    gap: 100px;
     justify-content: space-between;
 }
 .hero-image{
@@ -73,21 +74,21 @@ button{
     font-weight: 100;
     justify-content: center;
     height: 200px;
-    gap: 20px;
+    gap: 75px;
 }
 .images-child{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 112px;
+    width: 150px;
     flex: initial;
 }
 .info-image{
     border-radius: 15px;
     border-color: #3882f6;
     border-style: solid;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     padding: 3px;
 }
 .quote{
