--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ button{
     text-align: center;
     font-size: 36px;
     font-weight: 900;
+    padding: 50px 0px 100px;
     color: #1f2937;
 }
 .images{
@@ -74,6 +75,7 @@ button{
     font-weight: 100;
     justify-content: center;
     height: 200px;
+    padding: 25px 0px;
     gap: 75px;
 }
 .images-child{
@@ -87,6 +89,7 @@ button{
     border-radius: 15px;
     border-color: #3882f6;
     border-style: solid;
+    border-width: 4px;
     width: 150px;
     height: 150px;
     padding: 3px;
@@ -95,7 +98,7 @@ button{
     background-color: #e5e7eb;
     font-size: 36px;
     font-style: italic;
-    padding: 50px 100px;
+    padding: 100px 300px 30px;
 }
 .sign{
     display: flex;
@@ -106,18 +109,20 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 25px 50px;
-    padding: 25px 50px;
+    margin: 100px 210px;
+    padding: 35px 50px;
     border-radius: 5px;
     background-color: #3882f6;
     color: #e5e7eb;
 }
 .call-to-action{
     font-size: 18px;
+    margin-left: 75px;
 }
 .call{
     border-style: solid;
     border-color: #e5e7eb;
+    margin-right: 75px;
 }
 .footer{
     display: flex;
