--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body{
 }
 .banner{
     background-color: #1F2937;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding: 0px 200px;
 }
 .header{
     display: flex;
@@ -131,6 +130,5 @@ button{
     background-color: #1F2937;
     color:#e5e7eb;
     font-size: 18px;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding: 25px 0px;
 }
